<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project
     Modification copyright (C) 2021, greenTEG AG
     info@CoreBodyTemp.com

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CORE</string>

    <!-- Content Descriptions -->
    <string name="battery0to9text">battery state 0 to 9 percent</string>
    <string name="battery10to24text">battery state 10 to 24 percent</string>
    <string name="battery25to49text">battery state 25 to 49 percent</string>
    <string name="battery50to74text">battery state 50 to 74 percent</string>
    <string name="battery75to100text">battery state 75 to 100 percent</string>
    <string name="core_logo">CORE Logo</string>

    <!-- for Welcome Screen Main Activity-->
    <string name="location_permission_denied">Scanning for BLE devices like CORE needs location permission.</string>
    <string name="location_dialogue_positive">OK</string>
    <string name="location_dialogue_negative">Cancel</string>
    <string name="location_permission_denied_for_good">Go to app settings to grant location service permission</string>

    <string name="location_permission_rationale">
        Tap below to scan for CORE.</string>
    <string name="location_permission_rationale_no_show"></string>
    <string name="scanning_timed_out">No CORE devices found. Press Button to restart.
        Please make sure Bluetooth is not restricted on your device
        (no battery saving settings).</string>

    <!-- for BLE related modules: -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Connecting...</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connecting_to">Connecting to</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="start_scan">Scan for CORE</string>
    <string name="confirm_forget_clicked">Are you sure you want to forget this device?</string>
    <string name="confirm_forget_clicked_yes">Yes</string>
    <string name="confirm_forget_clicked_no">No</string>

    <!--CBT related constants-->
    <string name="current_CBT">--</string>
    <string name="display_curr_CBT">Core Body Temperature</string>
    <string name="forget">Forget</string>
    <string name="complications_provider_cbt_value">Core Body Temperature</string>

    <!--Dimensions-->
    <dimen name="list_item_height">50dp</dimen>

</resources>
