<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021, greenTEG AG
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/current_CBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_CBT"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_state" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/core_logo"
        android:scaleType="centerInside"
        android:src="@drawable/core_logo"
        app:layout_constraintBottom_toTopOf="@+id/current_CBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_address" />

    <TextView
        android:id="@+id/connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/disconnected"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/device_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="disconnectClicked"
        android:text="@string/forget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar_core_body_temperature_activity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@+id/current_CBT"
        app:layout_constraintEnd_toEndOf="@+id/current_CBT"
        app:layout_constraintStart_toStartOf="@+id/current_CBT"
        app:layout_constraintTop_toTopOf="@+id/current_CBT"
        tools:showIn="@layout/activity_device_scan" />

    <ImageView
        android:id="@+id/battery0to9"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:contentDescription="@string/battery0to9text"
        android:src="@drawable/ic_battery_0_9"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/connection_state"
        app:layout_constraintEnd_toEndOf="@+id/connection_state"
        app:layout_constraintStart_toStartOf="@+id/connection_state"
        app:layout_constraintTop_toTopOf="@+id/connection_state" />

    <ImageView
        android:id="@+id/battery10to24"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:contentDescription="@string/battery10to24text"
        android:src="@drawable/ic_battery_10_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/connection_state"
        app:layout_constraintEnd_toEndOf="@+id/connection_state"
        app:layout_constraintStart_toStartOf="@+id/connection_state"
        app:layout_constraintTop_toTopOf="@+id/connection_state" />

    <ImageView
        android:id="@+id/battery25to49"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:contentDescription="@string/battery25to49text"
        android:src="@drawable/ic_battery_25_49"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/connection_state"
        app:layout_constraintEnd_toEndOf="@+id/connection_state"
        app:layout_constraintStart_toStartOf="@+id/connection_state"
        app:layout_constraintTop_toTopOf="@+id/connection_state" />

    <ImageView
        android:id="@+id/battery50to74"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:contentDescription="@string/battery50to74text"
        android:src="@drawable/ic_battery_50_74svg"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/connection_state"
        app:layout_constraintEnd_toEndOf="@+id/connection_state"
        app:layout_constraintStart_toStartOf="@+id/connection_state"
        app:layout_constraintTop_toTopOf="@+id/connection_state" />

    <ImageView
        android:id="@+id/battery75to100"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:contentDescription="@string/battery75to100text"
        android:src="@drawable/ic_battery_75_100"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/connection_state"
        app:layout_constraintEnd_toEndOf="@+id/connection_state"
        app:layout_constraintStart_toStartOf="@+id/connection_state"
        app:layout_constraintTop_toTopOf="@+id/connection_state" />
</androidx.constraintlayout.widget.ConstraintLayout>